Fix flex layout collapse by explicitly calculating width

--- a/ui/style.css
+++ b/ui/style.css
@@ -44,6 +44,7 @@ body {
   padding: 2rem;
   display: flex;
   flex-direction: column;
+  flex-shrink: 0;
   z-index: 10;
 }
 
@@ -156,6 +157,7 @@ h1 {
 .main-content {
   flex-grow: 1;
   min-width: 0;
+  width: calc(100vw - 300px);
   height: 100%;
   display: grid;
   grid-template-columns: 1fr;
